--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -9,3 +9,12 @@
   height: 93%;
   display: flex;
 }
+
+/*반응형*/
+
+@media (max-width: 1400px) {
+  .main_wrap {
+    height: 98%;
+    border: 1px solid white;
+  }
+}
