--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -399,7 +399,23 @@
 
 /*미디어쿼리 사용 예정*/
 @media (max-width: 1100px) {
-  .category_wrap {
+  .category_wrap,
+  .circle {
     display: none;
+  }
+
+  .hidden {
+    margin-right: 5px;
+    width: 20px;
+  }
+
+  .hidden img {
+    width: 100%;
+    height: 100%;
+  }
+
+  li > span {
+    margin-right: 8px;
+    font-size: 1.7em;
   }
 }
