--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -148,6 +148,16 @@
   height: 100%;
 }
 
+.active {
+  background-color: #404249;
+  color: white;
+}
+
+.active .circle {
+  background-color: #23a55a;
+  border: 4px solid #404249;
+}
+
 .circle {
   display: block;
   width: 7px;
