--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -153,6 +153,10 @@
   color: white;
 }
 
+.active p {
+  color: white;
+}
+
 .active .circle {
   background-color: #23a55a;
   border: 4px solid #404249;
@@ -249,6 +253,16 @@
 
 .dark .link_wrap ul > li:hover .circle,
 .dark .menu_wrap_inner > li:hover .circle {
+  border: 4px solid #4f576b;
+}
+
+.dark .active {
+  background-color: #4f576b;
+  color: white;
+}
+
+.dark .active .circle {
+  background-color: #23a55a;
   border: 4px solid #4f576b;
 }
 
