--- a/src/components/SlideMenu.module.css
+++ b/src/components/SlideMenu.module.css
@@ -1,46 +1,56 @@
 .slide_wrap {
-  display: none;
   background-color: #2b2d31;
+  width: 20%;
+  height: 95.5%;
+  position: absolute;
+  top: 4.2%;
+  left: -100%;
+  z-index: 2;
 }
 
 .slide_inner {
-  padding: 13px;
-  white-space: nowrap;
-  color: white;
+  padding: 5px 10px;
 }
 
-.slide_inner h2 {
+.slide_inner > div {
+  color: white;
   float: right;
-  margin-bottom: 20px;
+  padding: 5px;
+  font-size: 1.2em;
+  cursor: pointer;
 }
 
 .slide_inner ul {
-  clear: both;
+  clear: right;
 }
 
-.slide_inner ul h3 {
-  margin-bottom: 15px;
+.slide_inner h3 {
+  color: white;
+  margin: 10px 0px;
 }
 
-.slide_inner ul > li > li {
-  display: flex;
-  margin-bottom: 15px;
-  align-items: center;
-  font-weight: 50;
+.slide_inner li {
   cursor: pointer;
-  border-radius: 20px;
-  padding: 5px;
+  display: flex;
+  align-items: center;
+  color: #9da4ad;
+  border-radius: 5px;
+  margin-bottom: 12px;
+  padding: 8px 10px;
 }
 
-.slide_inner ul > li:hover > li {
+.slide_inner li:hover {
   backdrop-filter: brightness(1.5);
+  color: white;
 }
 
 /*반응형*/
 @media (max-width: 1100px) {
   .slide_wrap {
-    width: 20%;
-    display: block;
-    transform: translateX(-100%);
+    transition: 0.2s;
+  }
+
+  .show {
+    left: 0;
   }
 }
