--- a/src/pages/contact.module.css
+++ b/src/pages/contact.module.css
@@ -10,13 +10,6 @@
   font-family: "Noto Sans KR", sans-serif;
 }
 
-.contact_inner > div {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-}
-
 .contact_inner > h2 {
   margin-top: 20px;
   text-align: center;
@@ -26,11 +19,26 @@
   font-weight: 600;
 }
 
+.contact_inner > div {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
 .img_wrap {
   width: 400px;
   height: 400px;
   border: 1px solid white;
   animation: imgcircle 1s forwards;
+  background-color: white;
+}
+
+.img_wrap img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: contain;
 }
 
 @keyframes imgcircle {
@@ -93,6 +101,7 @@
 
 .text_wrap ul li span {
   cursor: pointer;
+  font-size: 1.3em;
 }
 
 /*다크 모드*/
@@ -110,5 +119,13 @@
 
   .text_wrap ul li span {
     font-size: 1.3em;
+  }
+}
+
+@media (max-width: 800px) {
+  .contact_inner > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
