--- a/src/components/SlideMenu.module.css
+++ b/src/components/SlideMenu.module.css
@@ -44,6 +44,11 @@
   color: white;
 }
 
+/*다크 모드*/
+.dark {
+  background-color: #18253d;
+}
+
 /*반응형*/
 @media (max-width: 1100px) {
   .slide_wrap {
