--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -106,6 +106,19 @@
   border: 1.5px solid rgba(255, 255, 255, 0.4);
 }
 
+.dark::-webkit-scrollbar {
+  width: 0.6em;
+  background-color: #18253d;
+}
+.dark::-webkit-scrollbar-thumb {
+  background-color: #18253d;
+  border-radius: 10px;
+}
+
+.dark::-webkit-scrollbar-track {
+  background-color: #303a4b;
+}
+
 /*반응형*/
 @media (max-width: 1600px) {
   .about_inner h2 {
