--- a/src/components/SubBar.module.css
+++ b/src/components/SubBar.module.css
@@ -63,7 +63,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.dark ul li:hover:not(.green) {
+.dark ul li:hover {
   backdrop-filter: brightness(160%);
 }
 
