--- a/src/pages/Setting.module.css
+++ b/src/pages/Setting.module.css
@@ -99,6 +99,19 @@
   background-color: rgb(88, 101, 242);
 }
 
+.dark::-webkit-scrollbar {
+  width: 0.6em;
+  background-color: #18253d;
+}
+.dark::-webkit-scrollbar-thumb {
+  background-color: #18253d;
+  border-radius: 10px;
+}
+
+.dark::-webkit-scrollbar-track {
+  background-color: #303a4b;
+}
+
 /* 반응형 */
 @media (max-width: 1600px) {
   .img_wrap {
