--- a/src/pages/Project.module.css
+++ b/src/pages/Project.module.css
@@ -6,6 +6,7 @@
 
 .project_inner {
   text-align: center;
+  word-break: keep-all;
 }
 
 /*스크롤 style*/
@@ -57,8 +58,8 @@
   border-radius: 30px;
   backdrop-filter: brightness(0.8);
   padding: 20px;
-  overflow: hidden;
   background: url("/public/img/backgrpund_img.webp") no-repeat;
+  overflow: hidden;
 }
 
 /*label*/
@@ -82,12 +83,26 @@
 
 .item_inner > div:first-child .img_wrap {
   width: 100%;
-  height: auto;
+  height: 250px;
+  transition: 0.5s;
+}
+
+.item_inner > div:first-child .img_wrap:hover {
+  overflow: visible;
+}
+
+.item_inner > div:first-child .img_wrap:hover img {
+  transform: scale(1.2);
+  object-fit: contain;
+  transform: translateY(20px);
 }
 
 .item_inner > div:first-child .img_wrap img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
+  object-position: top center;
+  transition: 0.5s;
 }
 
 .text_wrap {
