프로젝트 추가

--- a/src/pages/Project.module.css
+++ b/src/pages/Project.module.css
@@ -37,7 +37,7 @@
 
 .project_content {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   padding: 40px;
   gap: 20px;
   flex-wrap: wrap;
